@@ -10,6 +10,15 @@
 	<include name="MainMenu">
 	
 	<control type="group">
+	
+		<!-- the below visible condition hack is needed for android -->
+		<visible>![Window.IsVisible(movieinformation) + !Skin.HasSetting(LockMainMenu)]</visible>
+		<visible>![Window.IsVisible(musicinformation) + !Skin.HasSetting(LockMainMenu)]</visible>
+		<visible>![Window.IsVisible(pictureinfo) + !Skin.HasSetting(LockMainMenu)]</visible>
+		<visible>![Window.IsVisible(addoninformation) + !Skin.HasSetting(LockMainMenu)]</visible>
+		<!-- the above visible condition hack is needed for android -->
+
+		
 		<animation effect="slide" start="0,0" end="-250,0" time="730" delay="70" reversible="false" condition="![Control.HasFocus(301) | Window.IsVisible(home) | Window.IsVisible(profiles) | Window.IsVisible(weather)] + !Skin.HasSetting(LockMainMenu)">Conditional</animation>
 		<animation effect="slide" start="-250,0" end="0,0" time="400" delay="20" reversible="false" tween="cubic" easing="out" condition="Control.HasFocus(301) + ![Window.IsVisible(home) | Window.IsVisible(profiles) | Window.IsVisible(weather)] + !Skin.HasSetting(LockMainMenu)">Conditional</animation>
 		
@@ -25,6 +34,7 @@
 
 	
 		<include>MenuBackground</include>
+		<include>EmptyMenu</include>
 		
 		<control type="list" id="301">
 
@@ -314,8 +324,8 @@
 						</item>
 						
 						<item id="105">
-							<description>Sort</description>
-							<label>31082</label>
+							<description>Options</description>
+							<label>31187</label>
 							<include>NotVisibleAllSettingsWindows</include>
 							<visible>![Window.IsActive(Home) | Window.IsActive(weather)]</visible>
 							<visible>!Skin.HasSetting(HideGlobalSort)</visible>
@@ -461,7 +471,7 @@
 					</content>		
 		</control>
 		
-		<include>EmptyMenu</include>
+		
 		
 		
 	</control>
@@ -815,6 +825,7 @@
 			
 		
 			<item id="12">
+				<description>unwatched</description>
 				<label>$LOCALIZE[31110] $LOCALIZE[16100]</label>
 				<onclick>SendClick(14)</onclick>
 				<visible>SubString(Control.GetLabel(14),*)</visible>
@@ -823,6 +834,7 @@
 				<property name="DropdownMenu1">not_empty</property>
 			</item>
 			<item id="12">
+				<description>unwatched</description>
 				<label>$LOCALIZE[31110] $LOCALIZE[16101]</label>
 				<onclick>SendClick(14)</onclick>
 				<visible>!SubString(Control.GetLabel(14),*)</visible>
@@ -830,7 +842,27 @@
 				<property name="SubMenuItem">not_empty</property>
 				<property name="DropdownMenu1">not_empty</property>
 			</item>
-						
+			
+			<item id="13">
+				<description>logo toggle</description>
+				<label>$LOCALIZE[31026] $LOCALIZE[31108]</label>
+				<onclick>Skin.ToggleSetting(ListLogoOff)</onclick>
+				<visible>!IsEmpty(skin.string(SubMenu1))</visible>
+				<visible>Control.IsVisible(50) + !Skin.HasSetting(ListLogoOff)</visible>
+				<property name="SubMenuItem">not_empty</property>
+				<property name="DropdownMenu1">not_empty</property>
+			</item>
+			<item id="13">
+				<description>logo toggle</description>
+				<label>$LOCALIZE[31026] $LOCALIZE[31109]</label> 
+				<onclick>Skin.ToggleSetting(ListLogoOff)</onclick>
+				<visible>!IsEmpty(skin.string(SubMenu1))</visible>
+				<visible>Control.IsVisible(50) + Skin.HasSetting(ListLogoOff)</visible>
+				<property name="SubMenuItem">not_empty</property>
+				<property name="DropdownMenu1">not_empty</property>
+			</item>
+
+			
 			<item id="15">
 				<description>Search</description>
 				<label>$LOCALIZE[137]</label>
