@@ -31,6 +31,29 @@
 					<animation effect="fade" start="0" end="70" time="0" condition="true">Conditional</animation>
 				</control>
 				<include>EmptyMenu</include>
+				
+				<control type="button" id="444">
+		
+					<left>0</left>
+					<top>616</top>
+					<description>Back Button</description>
+					<height>50</height>
+					<width>249</width>
+					<align>left</align>
+					<aligny>center</aligny>
+					<textoffsetx>23</textoffsetx>
+					<font>MainMenu21</font>
+					<label>31084</label>
+					<focusedcolor>white</focusedcolor>
+					<texturefocus>category.png</texturefocus>
+					<texturenofocus>-</texturenofocus>
+					<onclick>back</onclick>
+					<onup>9000</onup>
+					<ondown>9000</ondown>
+					<visible>Skin.HasSetting(HideGlobalBack)</visible>
+					<animation effect="fade" start="0" end="100" time="300" >WindowOpen</animation>
+				</control>
+				
 			</control>
 		
 		 <control type="group">
@@ -522,7 +545,7 @@
 				<left>2</left>
 				<top>65</top>
 				<width>250</width>
-				<height>648</height>
+				<height>548</height>
 				<onright condition="Control.IsVisible(111)">SetFocus(111)</onright>
 				<onright condition="Control.IsVisible(121)">SetFocus(121)</onright>
 				<onright condition="Control.IsVisible(141)">SetFocus(141)</onright>
@@ -532,7 +555,8 @@
 				<onright condition="Control.IsVisible(181)">SetFocus(181)</onright>
 				<onleft>999</onleft>
 				<onup>9000</onup>
-				<ondown>9000</ondown>
+				<ondown condition="Skin.HasSetting(HideGlobalBack)">444</ondown>
+				<ondown condition="!Skin.HasSetting(HideGlobalBack)">9000</ondown>
 				<pagecontrol>-</pagecontrol>
 				<scrolltime tween="cubic" easing="inout">325</scrolltime>
 				<orientation>vertical</orientation>
