@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="skin.metroid"
-  version="0.2.3"
+  version="0.2.4"
   name="Metroid"
   provider-name="MassIV">
   <requires>
