@@ -1,3 +1,15 @@
+[B]0.2.4[/B]
+- Fix grouplist stealing focus from menu, Android
+- Fix menu popping up in info dialogs
+- Fix select problem dialog info buttons, Android
+- Fix Mute window and icon
+- Fix CPU label
+- Fix OSD return to skin
+
+[B]0.2.3[/B]
+- Prep for translation
+- Move to dev repo
+
 [B]0.2.2[/B]
 - Stripped some views
 - Fullscreen button in videoinfo
